--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,1 @@
-#SETUP WEB APP ON FIREBASE TO GET THE BELOW CREDENTIALS
-FIREBASE_API_KEY = #API KEY FIREBASE
-FIREBASE_AUTH_DOMAIN = #AUTH DOMAIN FIREBASE
-FIREBASE_PROJECT_ID = 
-FIREBASE_STORAGE_BUCKET = 
-FIREBASE_MESSAGING_SENDER_ID = 
-FIREBASE_APP_ID = 
-FIREBASE_MEASUREMENT_ID = 
+VITE_API_BASE_URL=
